fix section services align link a

--- a/wp-content/themes/flhlmq/style.css
+++ b/wp-content/themes/flhlmq/style.css
@@ -869,8 +869,6 @@ Version: 1.0
   font-weight: bold;
   font-size: 16px;
   text-decoration: none;
-  align-self: end;
-  margin-bottom: 3%;
 }
 #accueil .section-services a:hover {
   text-decoration-color: #88b07e;
@@ -879,6 +877,7 @@ Version: 1.0
 #accueil .section-services .align-lien {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 #accueil .services {
   display: grid;
